update the idea and readme form the python to fully java