@@ -1,155 +1,341 @@
-# IntelliCoach
+# IntelliCoach - Time Tracking System
 
-**IntelliCoach** is an intelligent, student-centered digital platform designed to help students manage, monitor, and enhance their academic and personal growth. It integrates Java (OOP) for backend logic and data handling with Python Streamlit for analytics and visualization, providing a hybrid, interactive, and data-driven solution to support Self-Regulated Learning (SRL).
+## Project Overview
 
----
+IntelliCoach is a comprehensive time tracking and productivity management system designed to help users efficiently monitor their daily activities. The application provides real-time activity tracking using Start/Stop functionality, detailed analytics, comprehensive reporting, and personalized productivity recommendations.
+
+## Core Features
+
+### Activity Categories
+
+The system supports six predefined activity categories that are mandatory for comprehensive time tracking:
+
+1. **Academic** - Study sessions, homework, classes, and educational activities
+2. **Sport** - Physical exercise, fitness activities, and sports participation
+3. **Entertainment** - Leisure activities, games, social media, and recreational time
+4. **Extra Activity** - Clubs, volunteering, hobbies, and personal projects
+5. **Sleep** - Essential rest periods (mandatory for productivity analysis)
+6. **Health / Hygiene** - Personal care, meals, and health-related activities
+
+### Recommended Daily Time Allocation
+
+| Activity Category | Recommended Duration |
+|------------------|---------------------|
+| Academic | 6 – 8 hours |
+| Sleep | 7 – 9 hours |
+| Sport | 1 – 2 hours |
+| Entertainment | 1 – 2 hours |
+| Extra Activity | 1 – 2 hours |
+| Health / Hygiene | 30 – 60 minutes |
+
+These recommendations serve as benchmarks for analytics comparison, productivity scoring, and recommendation generation.
+
+## Time Tracking Logic
+
+### Activity Management
+- **Single Active Session**: Only one activity can be active at any given time
+- **Automatic Switching**: Starting a new activity automatically stops the current one
+- **No Overlapping**: The system prevents overlapping time entries
+- **Real-time Tracking**: Live timer displays current session duration
+
+### Data Storage
+- All activity sessions are automatically saved to SQLite database
+- Session data includes user ID, activity type, start/end times, and calculated duration
+- Data integrity is maintained through proper database constraints
+
+## System Architecture
+
+### Authentication Flow
+```
+Login Page → Dashboard → Feature Pages → Logout
+     ↓
+Registration Page (for new users)
+```
+
+### Navigation Structure
+- **Dashboard**: Central navigation hub
+- **Activity Tracking**: Start/Stop functionality with live timer
+- **Analytics**: Daily, weekly, and monthly time analysis
+- **Reports**: Comprehensive report generation and export
+- **Recommendations**: Personalized productivity suggestions
+
+## Analytics and Reporting
+
+### Analytics Features
+- Time distribution analysis across all activity categories
+- Period-based summaries (daily, weekly, monthly)
+- Actual vs. recommended time comparisons
+- Productivity pattern identification
+- Balance and imbalance detection
+
+### Report Generation
+- Detailed activity reports with precise duration calculations
+- Multiple export formats (CSV, TXT)
+- Customizable date ranges
+- Professional formatting for documentation purposes
+
+### Data Export Fields
+- Activity name and category
+- Session start and end timestamps
+- Calculated duration
+- Session date
+- User identification
+
+## Recommendation Engine
+
+### Analysis Criteria
+- Time allocation balance across categories
+- Sleep adequacy assessment
+- Entertainment time monitoring
+- Academic focus evaluation
+- Physical activity tracking
+
+### Recommendation Types
+- **Critical Alerts**: For severe imbalances (e.g., insufficient sleep)
+- **Balance Suggestions**: For time distribution optimization
+- **Activity Reminders**: For missing essential activities
+- **Productivity Tips**: For performance improvement
+
+### Productivity Scoring
+- Numerical score (0-100) based on time allocation efficiency
+- Comparison against recommended guidelines
+- Color-coded performance indicators
+- Trend analysis over time
+
+## Database Schema
+
+### Core Tables
+
+#### users
+- user_id (Primary Key, Auto-increment)
+- username (Unique, Not Null)
+- email (Unique, Not Null)
+- password (Encrypted)
+- full_name
+- created_at (Timestamp)
+
+#### activity_sessions
+- session_id (Primary Key, Auto-increment)
+- user_id (Foreign Key)
+- activity_type (Constrained to 6 categories)
+- start_time (Timestamp)
+- end_time (Timestamp)
+- duration_minutes (Calculated)
+- session_date (Date)
+- is_active (Boolean)
+- created_at (Timestamp)
+
+#### recommended_times
+- activity_type (Primary Key)
+- min_minutes (Integer)
+- max_minutes (Integer)
+- description (Text)
+
+#### recommendations
+- recommendation_id (Primary Key, Auto-increment)
+- user_id (Foreign Key)
+- recommendation_text (Text)
+- recommendation_type (Enum)
+- priority (HIGH/MEDIUM/LOW)
+- based_on_date (Date)
+- created_at (Timestamp)
+- is_read (Boolean)
+
+## Technical Implementation
+
+### JavaFX User Interface
+- **Pure JavaFX Implementation**: No FXML files used
+- **Layout Managers**: GridPane, VBox, BorderPane, HBox, FlowPane
+- **Event Handling**: Lambda expressions and functional interfaces
+- **Real-time Updates**: Timeline-based timer functionality
+
+### Design Patterns
+- **Singleton Pattern**: Database connections and service instances
+- **Data Access Object (DAO)**: Database interaction abstraction
+- **Model-View-Controller (MVC)**: Clear separation of concerns
+- **Observer Pattern**: Real-time UI updates
+
+### Advanced Java Features
+- **Lambda Expressions**: Event handling and stream operations
+- **Inner Classes**: Static, non-static, anonymous, and local implementations
+- **Functional Interfaces**: Predicate, Consumer, Function, Supplier
+- **Stream API**: Data processing and filtering
 
 ## Project Structure
 
 ```
 IntelliCoach/
-│
-├── java/                            # Java backend (OOP logic)
-│ ├── src/
-│ │ ├── models/                       # Java data classes
-│ │ │ ├── User.java
-│ │ │ ├── Activity.java
-│ │ │ └── ProgressLog.java
-│ │ ├── services/                       # Core logic / operations
-│ │ │ ├── ActivityService.java
-│ │ │ ├── ProgressService.java
-│ │ │ └── RecommendationService.java
-│ │ ├── controllers/                       # Controllers for GUI or APIs
-│ │ │ └── MainController.java
-│ │ ├── utils/                              # Helper classes
-│ │ │ ├── FileHandler.java                  # Read/write JSON or CSV
-│ │ │ └── JsonParser.java
-│ │ └── Main.java                            # Entry point
-│ └── data/                                  # Java-generated data for Streamlit
-│   ├── activities.json
-│   └── users.json
-│
-├── streamlit_app/                            # Python + Streamlit dashboard
-│ ├── app.py                                  # Main dashboard
-│ ├── analytics/                               # Analytics & visualization
-│ │ ├── charts.py
-│ │ ├── progress_analysis.py
-│ │ └── stats.py
-│ ├── recommendations/                          # Recommendations module
-│ │ └── recommend.py
-│ ├── components/                                # Optional modular UI components
-│ │ └── sidebar.py
-│ └── data/                                       # Processed/merged data for dashboard
-│   └── merged_data.csv
-│
-├── database/                                     # SQLite or JSON DB or PostgreSQL
-│ ├── student_db.sqlite
-│ └── logs/
-│   └── daily_logs.json
-│
-├── tests/                                          # Automated tests
-│ ├── java_tests/
-│ │ ├── TestActivity.java
-│ │ └── TestProgressService.java
-│ ├── python_tests/
-│ │ ├── test_analytics.py
-│ │ └── test_recommend.py
-│ └── integration_tests/
-│   └── test_java_python_bridge.py
-│
-├── docs/                                            # Documentation
-│ ├── proposal.pdf
-│ ├── system_design.md
-│ ├── requirements.md
-│ └── reports/
-│   └── final_report.docx
-│
-├── config/                                          # Config & environment settings
-│ ├── settings.json
-│ └── environment.env
-│
-├── lib/                                              # External dependencies
-│ ├── external_jars/                                  # Java libraries
-│ └── python_env/                                      # Python virtual environment
-│
-├── scripts/                                           # Optional utility scripts
-│ ├── java_to_python_sync.py                           # Auto-sync Java JSON to Python
-│ └── data_cleaner.py
-│
-├── README.md
-├── requirements.txt                                     # Python dependencies
-└── .gitignore
+├── src/java/com/
+│   ├── IntelliCoachApp.java
+│   ├── TestDatabase.java
+│   ├── models/
+│   │   ├── User.java
+│   │   ├── ActivitySession.java
+│   │   ├── ActivityType.java
+│   │   └── Recommendation.java
+│   ├── database/
+│   │   ├── DBConnection.java
+│   │   ├── UserDAO.java
+│   │   └── ActivitySessionDAO.java
+│   ├── services/
+│   │   ├── AuthenticationService.java
+│   │   ├── TimeTrackingService.java
+│   │   ├── AnalyticsService.java
+│   │   └── RecommendationService.java
+│   ├── views/
+│   │   ├── LoginView.java
+│   │   ├── RegistrationView.java
+│   │   ├── DashboardView.java
+│   │   ├── ActivityTrackingView.java
+│   │   ├── AnalyticsView.java
+│   │   ├── ReportsView.java
+│   │   └── RecommendationsView.java
+│   └── interfaces/
+│       ├── Repository.java
+│       ├── Service.java
+│       └── Trackable.java
+├── database/
+│   ├── schema.sql
+│   └── intellicoach.db
+├── lib/
+│   ├── sqlite-jdbc-3.44.1.0.jar
+│   ├── slf4j-api-2.0.9.jar
+│   └── slf4j-simple-2.0.9.jar
+├── build-and-run.bat
+├── build-only.bat
+└── README.md
 ```
+
+## Prerequisites
+
+### System Requirements
+1. **Java Development Kit (JDK) 11 or higher**
+2. **JavaFX SDK** for GUI functionality
+3. **SQLite JDBC Driver** (included in lib directory)
+
+### JavaFX Setup
+- Download JavaFX SDK from https://openjfx.io/
+- Extract to desired location
+- Update module path in run commands
+
+## Build and Execution
+
+### Windows Build System
+The project includes automated build scripts for Windows:
+
+```cmd
+# Build only (compilation)
+build-only.bat
+
+# Build and run application
+build-and-run.bat
+```
+
+### Manual Compilation
+```cmd
+# Create build directory
+mkdir build
+
+# Compile Java sources
+javac --module-path "path\to\javafx\lib" --add-modules javafx.controls -d build -cp "lib/*" -sourcepath src/java src/java/com/*.java src/java/com/*/*.java
+
+# Run application
+java --module-path "path\to\javafx\lib" --add-modules javafx.controls -cp "build;lib/*" com.IntelliCoachApp
+```
+
+### Database Testing
+```cmd
+# Test database connectivity (console application)
+java -cp "build;lib/*" com.TestDatabase
+```
+
+## Usage Instructions
+
+### Initial Setup
+1. Launch the application
+2. Create a new user account via registration
+3. Login with your credentials
+
+### Activity Tracking
+1. Navigate to Activity Tracking page
+2. Select desired activity from dropdown menu
+3. Click START to begin tracking
+4. Monitor real-time timer display
+5. Click STOP when activity is complete
+6. Session data is automatically saved
+
+### Analytics Review
+1. Access Analytics page from dashboard
+2. Select analysis period (daily, weekly, monthly)
+3. Choose specific date or date range
+4. Review time distribution charts and tables
+5. Compare actual vs. recommended time allocations
+
+### Report Generation
+1. Navigate to Reports page
+2. Configure report parameters
+3. Select export format (CSV or TXT)
+4. Generate and preview report
+5. Export for external use
+
+### Productivity Recommendations
+1. Access Recommendations page
+2. Select date for analysis
+3. Generate personalized recommendations
+4. Review productivity score and suggestions
+5. Implement recommended improvements
+
+## Quality Assurance
+
+### Validation Checklist
+- Start/Stop functionality operates correctly
+- Single active session enforcement
+- Automatic activity switching
+- No overlapping time entries
+- Complete activity category coverage
+- Accurate duration calculations
+- Comprehensive analytics generation
+- Reliable data export functionality
+- Effective recommendation algorithms
+- Secure user authentication
+- Robust database operations
+
+## Troubleshooting
+
+### Common Issues
+
+**Database Connection Errors**
+- Verify SQLite JDBC driver is present in lib directory
+- Check database file permissions
+- Ensure no other instances are accessing the database
+
+**JavaFX Runtime Errors**
+- Confirm JavaFX SDK is properly installed
+- Verify module path configuration
+- Check Java version compatibility
+
+**Compilation Errors**
+- Validate Java JDK installation
+- Confirm all dependencies are available
+- Check source file organization
+
+## Technical Support
+
+### Error Resolution
+1. Check system requirements compliance
+2. Verify all dependencies are installed
+3. Review configuration settings
+4. Consult troubleshooting section
+5. Examine application logs for detailed error information
+
+## License and Usage
+
+This application is developed for educational and productivity enhancement purposes. It demonstrates professional software development practices including object-oriented design, database integration, user interface development, and comprehensive testing methodologies.
+
+## Development Information
+
+**IntelliCoach Time Tracking System** represents a complete solution for personal productivity management, combining modern Java development practices with practical time management functionality.
 
 ---
 
-## Technologies Used
-
-- **Java (OOP)** – Core backend logic, activity logging, and data management
-- **Python + Streamlit** – Interactive dashboards, analytics, and visualizations
-- **PostgreSQL / MySQL** – Optional relational database for persistent storage
-- **JSON / CSV** – Data interchange between Java and Streamlit
-- **Libraries:** Pandas, Matplotlib, Plotly (Python); JDBC (Java)
-
----
-
-## Features
-
-1. **Activity Logging:** Students can record daily academic and extracurricular activities.
-2. **Progress Tracking:** Visualize daily, weekly, and monthly performance.
-3. **Analytics Dashboard:** Bar charts, line charts, and statistics for progress monitoring.
-4. **Personalized Recommendations:** Suggests areas for improvement based on logged activities.
-5. **Integration:** Java handles structured logic and data storage; Streamlit provides visualization.
-
----
-
-## Setup Instructions
-
-### Java
-
-1. Compile Java classes:
-
-```bash
-javac -d java/bin java/src/models/*.java java/src/services/*.java java/src/Main.java
-```
-
-2. Run Java to generate JSON files:
-
-```bash
-java -cp java/bin Main
-```
-
-### Streamlit
-
-1. Install dependencies:
-
-```bash
-pip install -r requirements.txt
-```
-
-2. Run the dashboard:
-
-```bash
-cd streamlit_app
-streamlit run app.py
-```
-
-### PostgreSQL (Optional)
-
-```sql
-CREATE DATABASE intellicoach;
-CREATE USER ic_user WITH PASSWORD 'password123';
-GRANT ALL PRIVILEGES ON DATABASE intellicoach TO ic_user;
-```
-
----
-
-## Contribution
-
-This is a personal academic project. Contributions for improvements, analytics, or visualization are welcome.
-
----
-
-## License
-
-[MIT Lice]
+**IntelliCoach** - Professional Time Tracking and Productivity Management
